--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,11 +1,4 @@
 {
-    "dependencies": {
-        "bootstrap": "^4.3.1",
-        "next": "^9.1.4",
-        "react": "^16.12.0",
-        "react-dom": "^16.12.0",
-        "reactstrap": "^8.1.1"
-    },
     "scripts": {
         "dev": "next",
         "build": "next build",
@@ -17,6 +10,23 @@
         "extends": [
             "wesbos"
         ]
+    },
+    "babelConfig": {
+        "presets": [
+            "next/babel"
+        ],
+        "plugins": [
+            [
+                "emotion"
+            ]
+        ]
+    },
+    "dependencies": {
+        "bootstrap": "^4.3.1",
+        "next": "^9.1.4",
+        "react": "^16.12.0",
+        "react-dom": "^16.12.0",
+        "reactstrap": "^8.1.1"
     },
     "devDependencies": {
         "babel-eslint": "^9.0.0",
