--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,10 +23,16 @@
     },
     "dependencies": {
         "bootstrap": "^4.3.1",
+        "gql": "^1.1.2",
+        "graphql": "^14.5.8",
+        "graphql-tag": "^2.10.1",
         "next": "^9.1.4",
+        "next-apollo": "^3.1.10",
         "react": "^16.12.0",
+        "react-apollo": "^3.1.3",
         "react-dom": "^16.12.0",
-        "reactstrap": "^8.1.1"
+        "reactstrap": "^8.1.1",
+        "recompose": "^0.30.0"
     },
     "devDependencies": {
         "babel-eslint": "^9.0.0",
