--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,51 +1,30 @@
 {
-    "scripts": {
-        "dev": "next",
-        "build": "next build",
-        "start": "next start",
-        "lint": "eslint .",
-        "lint:fix": "eslint . --fix"
-    },
-    "eslintConfig": {
-        "extends": [
-            "wesbos"
-        ]
-    },
-    "babelConfig": {
-        "presets": [
-            "next/babel"
-        ],
-        "plugins": [
-            [
-                "emotion"
-            ]
-        ]
-    },
-    "dependencies": {
-        "bootstrap": "^4.3.1",
-        "gql": "^1.1.2",
-        "graphql": "^14.5.8",
-        "graphql-tag": "^2.10.1",
-        "next": "^9.1.4",
-        "next-apollo": "^3.1.10",
-        "react": "^16.12.0",
-        "react-apollo": "^3.1.3",
-        "react-dom": "^16.12.0",
-        "reactstrap": "^8.1.1",
-        "recompose": "^0.30.0"
-    },
-    "devDependencies": {
-        "babel-eslint": "^9.0.0",
-        "eslint": "^5.14.1",
-        "eslint-config-airbnb": "^17.1.0",
-        "eslint-config-prettier": "^4.1.0",
-        "eslint-config-wesbos": "0.0.19",
-        "eslint-plugin-html": "^5.0.3",
-        "eslint-plugin-import": "^2.16.0",
-        "eslint-plugin-jsx-a11y": "^6.2.1",
-        "eslint-plugin-prettier": "^3.0.1",
-        "eslint-plugin-react": "^7.12.4",
-        "eslint-plugin-react-hooks": "^1.3.0",
-        "prettier": "^1.16.4"
-    }
+  "name": "frontend",
+  "version": "1.0.0",
+  "private": true,
+  "scripts": {
+    "dev": "node server.js",
+    "build": "next build",
+    "start": "NODE_ENV=production node server.js"
+  },
+  "dependencies": {
+    "bootstrap": "^4.1.3",
+    "express": "^4.16.4",
+    "gql": "^1.1.2",
+    "graphql": "^14.0.2",
+    "js-cookie": "^2.2.0",
+    "jwt-decode": "^2.2.0",
+    "next": "^7.0.2",
+    "next-apollo": "^2.0.1",
+    "react": "^16.6.1",
+    "react-apollo": "^2.2.4",
+    "react-dom": "^16.6.1",
+    "react-stripe-elements": "^6.0.1",
+    "reactstrap": "^6.5.0",
+    "recompose": "^0.30.0",
+    "strapi-sdk-javascript": "^0.3.0"
+  },
+  "engines": {
+    "node": "10.x.x"
+  }
 }
